Validate required attributes

--- a/app/views/deploys/_form.html.erb
+++ b/app/views/deploys/_form.html.erb
@@ -2,11 +2,15 @@
 
 
 <div class="box tabular">
+  <p><%= f.date_field(:date, required: true) %></p>
+  <p><%= f.time_field(:start_time, required: true) %></p>
+  <p><%= f.time_field(:estimated_end_time, required: true) %></p>
   <p><%= f.text_area(:release_notes, :rows => 8, :required => true) %></p>
   <p><%= f.text_field(:affected_projects, :size => 30, :required => false) %></p>
+  <p><%= f.text_field(:authorization, :size => 30, :required => false) %></p>
 
   <p><%= f.label :issues %>
-  <%= f.collection_select(:issue_ids, @project_issues, :id, :subject, {:include_blank => ''}, {multiple: true, class: 'select2_wide'})%></p>
+  <%= f.collection_select(:issue_ids, @project_issues, :id, :subject, {:include_blank => ''}, {:required => true, multiple: true, class: 'select2_wide'})%></p>
 
 
   <%= submit_tag l(:button_send) %>
