--- a/app/views/deploys/_form.html.erb
+++ b/app/views/deploys/_form.html.erb
@@ -10,4 +10,4 @@
   <p><%= f.text_field(:authorization, :size => 30, :required => false) %></p>
 
   <p><%= f.label :issues %>
-  <%= f.collection_select(:issue_ids, @project_issues, :id, :subject, {:include_blank => ''}, {:required => true, multiple: true, class: 'select2_wide'})%></p>
+  <%= f.collection_select(:issue_ids, @project_issues, :id, :id, {:include_blank => ''}, {:required => true, multiple: true, class: 'select2_wide'})%></p>
