--- a/app/views/deploys/show.html.erb
+++ b/app/views/deploys/show.html.erb
@@ -14,6 +14,23 @@
     <p><strong><%= t('.affected_projects') %></strong>: <%= @deploy.affected_projects %></p>
     <p><strong><%= t('.authorization') %></strong>: <%= @deploy.authorization %></p>
 
+    <% unless @deploy.affected_projects.blank? %>
+      <p><strong><%= t('.affected_projects') %></strong>: <%= @deploy.affected_projects %></p>
+    <% end %>
+
+    <% unless @deploy.authorization.blank? %>
+      <p><strong><%= t('.authorization') %></strong>: <%= @deploy.authorization %></p>
+    <% end %>
+
+    <% unless @user.blank? %>
+      <p><strong><%= t('.author') %></strong>: <%= link_to @user.name, user_path(@user.id) %></p>
+    <% end %>
+
+    <% unless @version.blank? %>
+      <p><strong><%= t('.version') %></strong>: <%= link_to @version.name, version_path(@version.id) %></p>
+    <% end %>
+
+
     <hr/>
     <p><strong><%= t('.issues') %></strong></p>
     <% @deploy.issues.each_with_index do |issue, index| %>
